--- a/CreateNewStyleSheet.html
+++ b/CreateNewStyleSheet.html
@@ -1,2 +1,132 @@
 <!-- This CSS package applies Google styling; it should always be included. -->
 <link rel="stylesheet" href="https://ssl.gstatic.com/docs/script/css/add-ons.css">
+
+<style>
+label {
+  font-weight: bold;
+}
+.branding-below {
+  bottom: 54px;
+  top: 0;
+}
+.branding-text {
+  left: 7px;
+  position: relative;
+  top: 3px;
+}
+.logo {
+  vertical-align: middle;
+}
+.width-100 {
+  width: 100%;
+  box-sizing: border-box;
+  -webkit-box-sizing : border-box;‌
+  -moz-box-sizing : border-box;
+}
+#sidebar-value-block,
+#dialog-elements {
+  background-color: #eee;
+  border-color: #eee;
+  border-width: 5px;
+  border-style: solid;
+}
+#sidebar-button-bar,
+#dialog-button-bar {
+  margin-bottom: 10px;
+}
+
+/* Spinner */
+.loader {
+  position: relative;
+  margin: 0 auto;
+  padding-left: 6px;
+  padding-right: 8px;
+  padding-top: 5px;
+  padding-bottom: 8px;
+  vertical-align: middle;
+  width: 50px;
+  &:before {
+    content: '';
+    display: block;
+    padding-top: 100%;
+  }
+}
+
+.circular {
+  animation: rotate 2s linear infinite;
+  height: 100%;
+  transform-origin: center center;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+}
+
+.path {
+  stroke-dasharray: 1, 200;
+  stroke-dashoffset: 0;
+  animation: dash 1.5s ease-in-out infinite, color 6s ease-in-out infinite;
+  stroke-linecap: round;
+}
+
+@keyframes rotate {
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes dash {
+  0% {
+    stroke-dasharray: 1, 200;
+    stroke-dashoffset: 0;
+  }
+  50% {
+    stroke-dasharray: 89, 200;
+    stroke-dashoffset: -35px;
+  }
+  100% {
+    stroke-dasharray: 89, 200;
+    stroke-dashoffset: -124px;
+  }
+}
+
+/*
+ * $green: #008744;
+ * $blue: #0057e7;
+ * $red: #d62d20;
+ * $yellow: #ffa700;
+ */
+@keyframes color {
+  100%,
+  0% {
+    stroke: #d62d20;
+  }
+  40% {
+    stroke: #0057e7;
+  }
+  66% {
+    stroke: #008744;
+  }
+  80%,
+  90% {
+    stroke: #ffa700;
+  }
+}
+
+/* Custom */
+.hidden {
+  display: none;
+}
+
+.show-inline {
+  display: inline;
+}
+
+.help {
+  font-weight: bold;
+  font-size: 9px;
+}
+</style>
