fixed incorrect order for createNew parameters

--- a/CreateNewJavaScript.html
+++ b/CreateNewJavaScript.html
@@ -108,7 +108,7 @@
           enableButtons();
           disableLoader();
         })
-      .createNew(createOptions.sheetname, createOptions.frequency, createOptions.customSheetname, createOptions.customRange, createOptions.daysInWeek, createOptions.daysDisplay, createOptions.showNext);
+      .createNew(createOptions.sheetname, createOptions.frequency, createOptions.daysDisplay, createOptions.showNext, createOptions.daysInWeek, createOptions.customSheetname, createOptions.customRange);
   }
   
   function updateRange(range_element_id, sheetname_element_id) {
