--- a/CreateNewSidebar.html
+++ b/CreateNewSidebar.html
@@ -1,4 +1,4 @@
-<?!= HtmlService.createHtmlOutputFromFile('CreateNewStyleSheet').getContent(); ?>
+<?!= HtmlService.createHtmlOutputFromFile('StyleSheet').getContent(); ?>
 
 <div class="sidebar roster-create-new">
   <p>
