added default value for days display

--- a/CreateNewJavaScript.html
+++ b/CreateNewJavaScript.html
@@ -155,7 +155,7 @@
     $('#sidebar-fillup-frequency-custom-sheetname').val('');
     $('#sidebar-fillup-frequency-custom-range').val('');
     $('#sidebar-fillup-days-in-week input:checkbox').removeAttr('checked');
-    $('#sidebar-fillup-days-display').val('');
+    $('#sidebar-fillup-days-display').val('3');
     $('#sidebar-fillup-show-next input:checkbox').removeAttr('checked');
   }
 
