--- a/CreateNewSidebar.html
+++ b/CreateNewSidebar.html
@@ -33,7 +33,7 @@
         </select>
       </td>
     </tr>
-    <tr id="sidebar-fillup-frequency-custom">
+    <tr id="sidebar-fillup-frequency-custom" class="hidden">
       <td style="vertical-align:top">
         <label style="cursor:help" title="Select the range of custom dates.">Dates: </label>
       </td>
