--- a/CreateNewJavaScript.html
+++ b/CreateNewJavaScript.html
@@ -143,7 +143,7 @@
       frequency : $('#sidebar-fillup-frequency').val(),
       customSheetname : $('#sidebar-fillup-frequency-custom-sheetname').val(),
       customRange : $('#sidebar-fillup-frequency-custom-range').val(),
-      daysInWeek : $.map($('#sidebar-fillup-days-in-week input:checkbox').find(':checked'), function(e){return $(e).val();}),
+      daysInWeek : $.map($('#sidebar-fillup-days-in-week input:checked'), function(e){return $(e).val();}),
       daysDisplay : $('#sidebar-fillup-days-display').val().trim(),
       showNext : $('#sidebar-fillup-show-next input:checkbox').is(':checked')
     };
