updated daily frequency to be default option

--- a/CreateNewJavaScript.html
+++ b/CreateNewJavaScript.html
@@ -151,7 +151,7 @@
   
   function clearOptions() {
     $('#sidebar-fillup-sheetname').val($('#sidebar-fillup-sheetname-default').val());
-    $('#sidebar-fillup-frequency').val('w');
+    $('#sidebar-fillup-frequency').val('d');
     $('#sidebar-fillup-frequency-custom-sheetname').val('');
     $('#sidebar-fillup-frequency-custom-range').val('');
     $('#sidebar-fillup-days-in-week input:checkbox').removeAttr('checked');
