fixed inconsistent naming of frequency and intervals

--- a/CreateNewSidebar.html
+++ b/CreateNewSidebar.html
@@ -88,7 +88,7 @@
     </tr>
     <tr>
       <td>
-       <label style="cursor:help" title="Number of days to display per interval.">Number of days: </label>
+       <label style="cursor:help" title="Number of days to display for the frequency.">Number of days: </label>
       </td>
       <td colspan="2">
         <input type="number" id="sidebar-fillup-days-display" value="" required>
