--- a/CreateFromExistingSidebar.html
+++ b/CreateFromExistingSidebar.html
@@ -149,4 +149,4 @@
 </div>
 
 <!-- Use a templated HTML printing scriptlet to import JavaScript. -->
-<?!= HtmlService.createHtmlOutputFromFile('CreateNewJavaScript').getContent(); ?>
+<?!= HtmlService.createHtmlOutputFromFile('CreateFromExistingJavaScript').getContent(); ?>
