renamed common to utils

--- a/JavaScript.html
+++ b/JavaScript.html
@@ -1,7 +1,7 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script>
 
-var common = {
+var utils = {
   /**
    * Displays the given status message in the sidebar.
    *
