fixed side bar bottom for create new html

--- a/CreateNewSidebar.html
+++ b/CreateNewSidebar.html
@@ -109,10 +109,10 @@
 </div>
 
 <div class="sidebar bottom">
-  <div id="static" class="show-inline static-loader">Created by <img class="logo" width="30" src="https://avatars.githubusercontent.com/ryancyq?v=3&s=30"></div>
-  <div id="loader" class="hidden dynamic-loader">
+  <div id="static-loader" class="show-inline">Created by <a href="https://github.com/ryancyq/roster-google-sheets-add-on"><img class="logo" width="20" src="https://avatars.githubusercontent.com/ryancyq?v=3&s=20s"></a></div>
+  <div id="dynamic-loader" class="hidden">
     <div class="loader">
-      <svg class="circular" viewBox="25 25 50 50">
+      <svg class="circular" viewBox="30 30 30 30">
         <circle class="path" cx="50" cy="50" r="20" fill="none" stroke-width="2" stroke-miterlimit="10"/>
       </svg>
     </div>
