fixed custom sheet name and range styling

--- a/CreateNewSidebar.html
+++ b/CreateNewSidebar.html
@@ -33,17 +33,10 @@
       </td>
       <td colspan="2">
         <div class="block form-group">
+          <input type="text" id="sidebar-fillup-frequency-custom-sheetname" placeholder="Sheet name" value="">
+          <input type="text" id="sidebar-fillup-frequency-custom-range" placeholder="Range" value="" style="width:10em;margin-top:1px;">
           <button class="narrow-button" title="Use selected range" onclick="utils.updateRange('sidebar-fillup-frequency-custom-range', 'sidebar-fillup-frequency-custom-sheetname');">↘</button>
         </div>
-        <div class="block form-group">
-          <label for="sidebar-fillup-frequency-custom-sheetname">Sheet Name</label>
-          <input type="text" id="sidebar-fillup-frequency-custom-sheetname" value="">
-        </div>
-        <div class="block form-group">
-          <label for="sidebar-fillup-frequency-custom-range">Range</label>
-          <input type="text" id="sidebar-fillup-frequency-custom-range" value="">
-        </div>
-
       </td>
     </tr>
     <tr id="sidebar-fillup-days-in-week" class="hidden">
