added style for narrow button

--- a/StyleSheet.html
+++ b/StyleSheet.html
@@ -133,4 +133,11 @@ label {
 .sidebar.roster {
   width: auto;
 }
+
+.narrow-button {
+  margin-top: 1px;
+  min-width: 28px;
+  height: 25px;
+  line-height: 25px;
+}
 </style>
