fixed styling for create from exsting html

--- a/CreateFromExistingSidebar.html
+++ b/CreateFromExistingSidebar.html
@@ -1,61 +1,43 @@
 <?!= HtmlService.createHtmlOutputFromFile('StyleSheet').getContent(); ?>
 
-<div class="sidebar roster-create-from-existing">
+<div class="sidebar roster roster-create-from-existing">
   <p>
   Roster Lookup Data
   </p>
   <table id="roster-fillup-options-table" class="table sidebar-value-block" width="100%">
     <tr>
       <td style="vertical-align:top">
-        <label style="cursor:help" title="Select the range of names.">Names: </label>
+        <label style="cursor:help" title="Select the range of names.">Name: </label>
       </td>
       <td colspan="2">
         <div class="block form-group">
+          <input type="text" id="sidebar-fillup-person-name-sheetname" placeholder="Sheet name" value="">
+          <input type="text" id="sidebar-fillup-person-name-range" placeholder="Range" value="" style="width:10em;margin-top:1px;">
           <button class="narrow-button" title="Use selected range" onclick="updateRange('sidebar-fillup-person-name-range', 'sidebar-fillup-person-name-sheetname');">↘</button>
         </div>
+      </td>
+    </tr>
+    <tr>
+      <td style="vertical-align:top">
+        <label style="cursor:help" title="Select the range of timestamps.">Timeslot: </label>
+      </td>
+      <td colspan="2">
         <div class="block form-group">
-          <label for="sidebar-fillup-person-name-sheetname">Sheet Name</label>
-          <input type="text" id="sidebar-fillup-person-name-sheetname" value="">
-        </div>
-        <div class="block form-group">
-          <label for="sidebar-fillup-person-name-range">Range</label>
-          <input type="text" id="sidebar-fillup-person-name-range" value="">
+          <input type="text" id="sidebar-fillup-timestamp-sheetname" placeholder="Sheet name" value="">
+          <input type="text" id="sidebar-fillup-timestamp-range" placeholder="Range" value="" style="width:10em;margin-top:1px;">
+          <button class="narrow-button" title="Use selected range" onclick="updateRange('sidebar-fillup-timestamp-range', 'sidebar-fillup-timestamp-sheetname');">↘</button>
         </div>
       </td>
     </tr>
     <tr>
       <td style="vertical-align:top">
-        <label style="cursor:help" title="Select the range of timestamps.">Timeslots: </label>
+        <label style="cursor:help" title="Select the range of timestamps.">Submitted on: </label>
       </td>
       <td colspan="2">
         <div class="block form-group">
+          <input type="text" id="sidebar-fillup-timestamp-sheetname" placeholder="Sheet name" value="">
+          <input type="text" id="sidebar-fillup-timestamp-range" placeholder="Range" value="" style="width:10em;margin-top:1px;">
           <button class="narrow-button" title="Use selected range" onclick="updateRange('sidebar-fillup-timestamp-range', 'sidebar-fillup-timestamp-sheetname');">↘</button>
-        </div>
-        <div class="block form-group">
-          <label for="sidebar-fillup-timestamp-sheetname">Sheet Name</label>
-          <input type="text" id="sidebar-fillup-timestamp-sheetname" value="">
-        </div>
-        <div class="block form-group">
-          <label for="sidebar-fillup-timestamp-range">Range</label>
-          <input type="text" id="sidebar-fillup-timestamp-range" value="">
-        </div>
-      </td>
-    </tr>
-    <tr>
-      <td style="vertical-align:top">
-        <label style="cursor:help" title="Select the range of timestamps.">Timestamps: </label>
-      </td>
-      <td colspan="2">
-        <div class="block form-group">
-          <button class="narrow-button" title="Use selected range" onclick="updateRange('sidebar-fillup-timestamp-range', 'sidebar-fillup-timestamp-sheetname');">↘</button>
-        </div>
-        <div class="block form-group">
-          <label for="sidebar-fillup-timestamp-sheetname">Sheet Name</label>
-          <input type="text" id="sidebar-fillup-timestamp-sheetname" value="">
-        </div>
-        <div class="block form-group">
-          <label for="sidebar-fillup-timestamp-range">Range</label>
-          <input type="text" id="sidebar-fillup-timestamp-range" value="">
         </div>
       </td>
     </tr>
@@ -74,19 +56,13 @@
   <table id="roster-fillup-options-table" class="table sidebar-value-block" width="100%">
     <tr>
       <td style="vertical-align:top">
-        <label style="cursor:help" title="Select the range of names.">Names: </label>
+        <label style="cursor:help" title="Select the range of names.">Name: </label>
       </td>
       <td colspan="2">
         <div class="block form-group">
+          <input type="text" id="sidebar-fillup-person-name-sheetname" placeholder="Sheet name" value=""> 
+          <input type="text" id="sidebar-fillup-person-name-range" placeholder="Range" value="" style="width:10em;margin-top:1px;">
           <button class="narrow-button" title="Use selected range" onclick="updateRange('sidebar-fillup-person-name-range', 'sidebar-fillup-person-name-sheetname');">↘</button>
-        </div>
-        <div class="block form-group">
-          <label for="sidebar-fillup-person-name-sheetname">Sheet Name</label>
-          <input type="text" id="sidebar-fillup-person-name-sheetname" value="">
-        </div>
-        <div class="block form-group">
-          <label for="sidebar-fillup-person-name-range">Range</label>
-          <input type="text" id="sidebar-fillup-person-name-range" value="">
         </div>
       </td>
     </tr>
@@ -96,33 +72,21 @@
       </td>
       <td colspan="2">
         <div class="block form-group">
+        <input type="text" id="sidebar-fillup-timetable-range" placeholder="Sheet name" value="">
+          <input type="text" id="sidebar-fillup-timetable-sheetname" placeholder="Range" value="" style="width:10em;margin-top:1px;">
           <button class="narrow-button" title="Use selected range" onclick="updateRange('sidebar-fillup-timetable-range', 'sidebar-fillup-timetable-sheetname');">↘</button>
-        </div>
-        <div class="block form-group">
-          <label for="sidebar-fillup-timetable-header-sheetname">Sheet Name</label>
-          <input type="text" id="sidebar-fillup-timetable-sheetname" value="">
-        </div>
-        <div class="block form-group">
-          <label for="sidebar-fillup-timetable-header-range">Range</label>
-          <input type="text" id="sidebar-fillup-timetable-range" value="">
         </div>
       </td>
     </tr>
     <tr>
       <td style="vertical-align:top">
-        <label style="cursor:help" title="Select the range of timestamps.">Timestamps: </label>
+        <label style="cursor:help" title="Select the range of timestamps.">Submitted On: </label>
       </td>
       <td colspan="2">
         <div class="block form-group">
+          <input type="text" id="sidebar-fillup-timestamp-sheetname" placeholder="Sheet name" value="">
+          <input type="text" id="sidebar-fillup-timestamp-range" placeholder="Range" value="">
           <button class="narrow-button" title="Use selected range" onclick="updateRange('sidebar-fillup-timestamp-range', 'sidebar-fillup-timestamp-sheetname');">↘</button>
-        </div>
-        <div class="block form-group">
-          <label for="sidebar-fillup-timestamp-sheetname">Sheet Name</label>
-          <input type="text" id="sidebar-fillup-timestamp-sheetname" value="">
-        </div>
-        <div class="block form-group">
-          <label for="sidebar-fillup-timestamp-range">Range</label>
-          <input type="text" id="sidebar-fillup-timestamp-range" value="">
         </div>
       </td>
     </tr>
@@ -138,10 +102,10 @@
 </div>
 
 <div class="sidebar bottom">
-  <div id="static" class="show-inline"><img class="logo" width="50" src="https://avatars.githubusercontent.com/ryancyq?v=3&s=80"></div>
-  <div id="loader" class="hidden">
+  <div id="static-loader" class="show-inline">Created by <a href="https://github.com/ryancyq/roster-google-sheets-add-on"><img class="logo" width="20" src="https://avatars.githubusercontent.com/ryancyq?v=3&s=20s"></a></div>
+  <div id="dynamic-loader" class="hidden">
     <div class="loader">
-      <svg class="circular" viewBox="25 25 50 50">
+      <svg class="circular" viewBox="30 30 30 30">
         <circle class="path" cx="50" cy="50" r="20" fill="none" stroke-width="2" stroke-miterlimit="10"/>
       </svg>
     </div>
@@ -149,4 +113,5 @@
 </div>
 
 <!-- Use a templated HTML printing scriptlet to import JavaScript. -->
+<?!= HtmlService.createHtmlOutputFromFile('JavaScript').getContent(); ?>
 <?!= HtmlService.createHtmlOutputFromFile('CreateFromExistingJavaScript').getContent(); ?>
