added style sheet for CreateFromExisting Template

--- a/CreateFromExistingSidebar.html
+++ b/CreateFromExistingSidebar.html
@@ -1,4 +1,5 @@
 <?!= HtmlService.createHtmlOutputFromFile('StyleSheet').getContent(); ?>
+<?!= HtmlService.createHtmlOutputFromFile('CreateFromExistingStyleSheet').getContent(); ?>
 
 <div class="sidebar roster roster-create-from-existing">
   <p>
